--- a/styles/style.css
+++ b/styles/style.css
@@ -152,3 +152,42 @@ nav a {
     margin: 30px auto 0;
 }
 
+.section {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    position: relative;
+    margin: 210.12px 150px 133.87px 150px;
+}
+
+.image-container {
+    position: relative;
+}
+
+.image-container .main-image {
+    width: 540px;
+    height: 597px;
+}
+
+.badge {
+    position: absolute;
+    top: -100px;
+    left: 450px;
+    width: 200px;
+}
+
+.text-content {
+    padding: 30px 0px 30px 60px;
+    max-width: 600px;
+}
+
+.text-content h2 {
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+
+.text-content p {
+    margin-bottom: 15px;
+    color: #555;
+    font-size: 22px;
+}
